--- a/app/views/userAdd.ejs
+++ b/app/views/userAdd.ejs
@@ -4,7 +4,7 @@
       <%- include('../partials/head'); %>
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-        
+        <link rel='stylesheet' href='/stylesheets/styleProductDetailOk.css' />
       </head>
     
   <body>
@@ -32,11 +32,11 @@
       <input type="file" name="image">
       </div>
       
-      <div class="row">
-        <div class="col-12">
+      
+        <div class="col-xl-12 col-lg-12 col-12">
           <p class="tituloDetalle"> Datos de Usuario </p>
         </div>
-      </div>
+      
       
         <div class="row">
           <div class="form-group col">
