--- a/app/views/editUser.ejs
+++ b/app/views/editUser.ejs
@@ -2,6 +2,7 @@
 <html>
   <head>
     <%- include('../partials/head'); %> 
+    <link rel='stylesheet' href='/stylesheets/styleProductDetailOk.css' />
   </head>
   
   <body>
