--- a/app/views/productDetailOk.ejs
+++ b/app/views/productDetailOk.ejs
@@ -3,7 +3,7 @@
   <head>
     <%- include('../partials/head'); %>
     <link rel='stylesheet' href='/stylesheets/styleProductDetailOk.css' />
-    
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   
   </head>
 
@@ -40,13 +40,6 @@
     <div class="row">
       <div class="col-6 col-lg-4"> <img src="/images/products/<%= prod.image %>"> </div>
       <div class="col-12 col-sm-6 col-lg-8"> 
-       <p class="tituloDetalle">ESPECIFICACIONES</p> 
-       <ul class="caracteristicasProductos">
-       <li>Marca: Raspberry </li>   
-       <li>Modelo: 3B+ </li> 
-       <li>Voltaje: 5V</li>
-       <li>  <%= prod.prodName %>  </li>
-      </ul>
         <p class="tituloDetalle"> DESCRIPCION </p>
         <p class="textoDescripcion">
           <%= prod.description %>
