carpeta Middleware + Fix menor mensaje info creacion producto

--- a/app/views/editProduct.ejs
+++ b/app/views/editProduct.ejs
@@ -13,8 +13,8 @@
 <div class="container products-wrapper">
     <div class="row">
         <div class="col-12">
-            <% if(title == undefined) { var title = "Modificar Producto"} else { var title = "Producto Modificado! :)" } %>
-            <h2 class="products-title"> <%= title %> </h2>
+            <% if(msg == undefined) { var title = "Modificar Producto"} else { var title = "Producto Modificado! :)" } %>
+            <h2 class="products-title">  <%= msg %> </h2>
         </div>
     
         <div class="col-12 col-sm-6 col-lg-3">
