--- a/app/views/editUser.ejs
+++ b/app/views/editUser.ejs
@@ -13,14 +13,14 @@
 <div class="container products-wrapper">
     <div class="row">
         <div class="col-12">
-            <% if(title == undefined) { var title = "Modificar Usuario"} else { var title = "Usuario Modificado! :)" } %>
             <h2 class="products-title"> <%= title2 %> </h2>
         </div>
+
     
         <div class="col-12 col-sm-6 col-lg-3">
            
             <section class="product-box">
-                <form action="/users/<%= user.id %>?_method=PUT" enctype="multipart/form-data" method="POST" >
+                <form action="/users/<%= user.id %>/edit?_method=PUT" enctype="multipart/form-data" method="POST" >
                     <div>
                         <label>Nombre de Usuario:</label>
                       
@@ -54,9 +54,9 @@
                 
                 </form>
             </section>
-          
+            
         </div>
-    
+        <h5 class="products-title"> <%= msg %> </h5>
     </div>
 </div>
 
