Correcciones menores de front en users y products

--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -3,6 +3,7 @@
   <head>
     <%- include('../partials/head'); %> 
     <link rel='stylesheet' href='/stylesheets/styleIndex.css' />
+    <link rel='stylesheet' href='/stylesheets/styleProductDetail.css' />
   </head>
   
   <body>
