--- a/app/views/productCart.ejs
+++ b/app/views/productCart.ejs
@@ -5,7 +5,7 @@
     
     <link rel='stylesheet' href='/stylesheets/productCart.css' />
     <link rel='stylesheet' href='/stylesheets/bootstrap.min.css' />
-   
+    <link rel='stylesheet' href='/stylesheets/styleProductDetail.css' />
   </head>
   
   <body>
