--- a/app/views/users.ejs
+++ b/app/views/users.ejs
@@ -17,25 +17,26 @@
         <div class="col-12">
             <h2 class="products-title">Todos los Usuarios</h2>
         </div>
-    
-        <div class="col-12 col-sm-6 col-lg-3">
-            <% users.forEach( usr => { %>
+        <% users.forEach( usr => { %>
+        <div class="col-xl-3 col-12 col-sm-6 col-lg-3">
+            
             <section class="product-box">
                 <!-- <a href="/products/detail/<%= usr.image %>"> -->
-                    <a href="/"></a>
+                    <a href="/users/<%= usr.id %>">
                     <figure class="product-box_image">
                         <img src="/images/users/<%= usr.image %>" alt="imagen de usuario">
                     </figure>
                     <article class="product-box_data">
-                        <h2>$<%= usr.nombre %> </h2>
+                        <h2><%= usr.nombre %> </h2>
                         <span><%= usr.apellido %></span>
                         <p><%= usr.email %></p>
-                        <i class="fas fa-truck"></i>
+                        <!-- <i class="fas fa-truck"></i> -->
                     </article>
                 </a>
             </section>
-            <% }); %>
+           
         </div>
+        <% }); %>
     </div>
 </div>
 
