--- a/app/views/products.ejs
+++ b/app/views/products.ejs
@@ -17,7 +17,7 @@
 <div class="container products-wrapper">
     <div class="row">
         <div class="col-12">
-            <h2 class="products-title">Todos los productos</h2>
+            <h2 class="products-title"><%= title2 %></h2>
         </div>
         <% prods.forEach( prd => { %>
         <div class="col-xl-4 col-lg-4 col-12 col-sm-6 col-lg-3">
