fix menor en mosaicos

--- a/app/public/stylesheets/styleIndex.css
+++ b/app/public/stylesheets/styleIndex.css
@@ -160,4 +160,8 @@ text-decoration: underline;
     width: auto\9; /* ie8 
 } 
 */
-
+@media (max-width: 460px){
+  .combos{
+    width: 118%;
+  }
+}
