--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -29,16 +29,16 @@
 
      </div>
 
-     <div class="col-xl-4  col-lg-6 col-md-5 col-sm-6 col-12">
+     <div class="col-xl-4  col-lg-12 col-md-5 col-sm-6 col-12">
       <div class="cont">
   <h6>PLCs</h6>
   <a href="/products/category/PLC" class="call-to-action"><img src="/images/PLC_Home.jpg"></a>
       </div>
      </div>
-     <div class="col-xl-12  col-lg-4 col-md-12 col-sm-6 col-12">
+     <div class="col-xl-12  col-lg-12 col-md-12 col-sm-6 col-12">
       <div class="cont">
   <h6>COMBOS Y OFERTAS </h6>
-  <a href="/products/category/Combos y Ofertas" class="call-to-action"><img src="/images/Combos.jpg" alt="Combos y Ofertas"> </a>
+  <a href="/products/category/Combos y Ofertas" class="call-to-action"><img class="combos"src="/images/Combos.jpg" alt="Combos y Ofertas"> </a>
       </div>
 
      </div>
