--- a/app/views/userForm.ejs
+++ b/app/views/userForm.ejs
@@ -12,41 +12,63 @@
     <div class="container-header">
       <%- include('../partials/nav'); %> 
  
-      <form id="regForm" action="">
+      <form id="regForm" action="/users" enctype="multipart/form-data" method="POST" >
 
-        <h1>Register:</h1>
+        <h1>Registro</h1>
         
-        <!-- One "tab" for each step in the form: -->
-        <div class="tab">Name:
-          <p><input placeholder="First name..." oninput="this.className = ''"></p>
-          <p><input placeholder="Last name..." oninput="this.className = ''"></p>
+    
+        <div class="tab">Sobre vos:
+          <p><input placeholder="Nombre..." name="nombre" oninput="this.className = ''"></p>
+          <p><input placeholder="Apellido..." name="apellido" oninput="this.className = ''"></p>
+          <p><select id="inputState" name="genero" class="form-control">
+            <option selected>Genero</option>
+            <option>Hombre</option>
+            <option>Mujer</option>
+          </select></p>
+          <p> <label>Foto:</label>
+            <input type="file" name="image"></p>
+            <p><select id="inputState" class="form-control">
+              <option selected>Tipo de Documento</option>
+              <option>DNI</option>
+              <option>Libreta</option>
+              <option>Pasaporte</option>
+            </select></p>
+            <p><label for="inputModelo">Numero de Documento</label>
+              <input type="text" class="form-control" id="inputModelo" name="numeroDoc"></p>
+
+        </div>
+
+        <div class="tab">Datos de Usuario:
+          <p><input placeholder="Nombre de Usuario..." name="nombreUsuario" oninput="this.className = ''"></p>
+          <p><input type="password" placeholder="Contraseña..." name="contrasena" oninput="this.className = ''"></p>
         </div>
         
-        <div class="tab">Contact Info:
-          <p><input placeholder="E-mail..." oninput="this.className = ''"></p>
-          <p><input placeholder="Phone..." oninput="this.className = ''"></p>
+        <div class="tab">Datos de Contacto:
+          <p><input placeholder="E-mail..." name="email" oninput="this.className = ''"></p>
+          <p> <input type="tel" name="telefono" name="tel1" value="Telefono 1"></p>
+          <p><input type="tel" name="telefono2" name="tel2" value="Telefono 2"></p>
+          <p><input type="text" name="calle" value="Calle"></p>
+        <p><input type="text" name="numero" value="Numero"></p>
+       <p> <input type="text" name="city" value="Ciudad"></p>
+        <p><input type="text" name="cp" value="Codigo Postal"></p>
+        <p><input type="text" name="state" value="Provincia"></p>
         </div>
         
-        <div class="tab">Birthday:
-          <p><input placeholder="dd" oninput="this.className = ''"></p>
-          <p><input placeholder="mm" oninput="this.className = ''"></p>
-          <p><input placeholder="yyyy" oninput="this.className = ''"></p>
-        </div>
-        
-        <div class="tab">Login Info:
-          <p><input placeholder="Username..." oninput="this.className = ''"></p>
-          <p><input placeholder="Password..." oninput="this.className = ''"></p>
+        <div class="tab">Perfil de Vendedor:
+          <p><input type="text" name="nomVendedor" value="Nombre Fantasia/Apodo"></p>
+         <p><input type="checkbox" id="utilizarApodo"  value="first_checkbox">Utilizar mi nombre y apellido como nombre fantasia/apodo</p>
+       <p><input type="checkbox" id="esVendedor" value="first_checkbox"><b>No quiero activar ahora mi perfil de vendedor</b></p> 
+      <p><input type="checkbox" id="aceptaTerminos" value="first_checkbox">Al registrarme acepto los <a>terminos y condiciones y la Politica de Privacidad de SLC Componentes Electronicos SA</a></p>
         </div>
         
         <div style="overflow:auto;">
           <div style="float:right;">
-            <button type="button" id="prevBtn" onclick="nextPrev(-1)">Previous</button>
-            <button type="button" id="nextBtn" onclick="nextPrev(1)">Next</button>
+            <button type="button" id="prevBtn" onclick="nextPrev(-1)">Anterior</button>
+            <button type="button" id="nextBtn" onclick="nextPrev(1)">Siguiente</button>
           </div>
         </div>
         
-        <!-- Circles which indicates the steps of the form: -->
-        <div style="text-align:center;margin-top:40px;">
+           <div style="text-align:center;margin-top:40px;">
           <span class="step"></span>
           <span class="step"></span>
           <span class="step"></span>
