fix menor en index

--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -32,7 +32,7 @@
      <div class="col-xl-4  col-lg-12 col-md-5 col-sm-6 col-12">
       <div class="cont">
   <h6>PLCs</h6>
-  <a href="/products/category/PLC" class="call-to-action"><img src="/images/PLC_Home.jpg"></a>
+  <a href="/products/category/PLC" class="call-to-action"><img src="/images/PLC_home.jpg"></a>
       </div>
      </div>
      <div class="col-xl-12  col-lg-12 col-md-12 col-sm-6 col-12">
