--- a/app/views/userForm.ejs
+++ b/app/views/userForm.ejs
@@ -45,17 +45,16 @@
         
         <div class="tab">Datos de Contacto:
           <p><input placeholder="E-mail..." name="email" oninput="this.className = ''"></p>
-          <p> <input type="tel" name="telefono" name="tel1" value="Telefono 1"></p>
-          <p><input type="tel" name="telefono2" name="tel2" value="Telefono 2"></p>
-          <p><input type="text" name="calle" value="Calle"></p>
-        <p><input type="text" name="numero" value="Numero"></p>
-       <p> <input type="text" name="city" value="Ciudad"></p>
-        <p><input type="text" name="cp" value="Codigo Postal"></p>
-        <p><input type="text" name="state" value="Provincia"></p>
+          <p> <input type="tel" name="telefono" name="tel1" placeholder="Telefono1..."></p>
+          <p><input type="tel" name="telefono2" name="tel2" placeholder="Telefono2..."></p>
+          <p><input type="text" name="calle" placeholder="Calle y número..."></p>
+       <p> <input type="text" name="city" placeholder="Ciudad..."></p>
+        <p><input type="text" name="cp" placeholder="Código Postal"></p>
+        <p><input type="text" name="provincia" placeholder="Provincia..."></p>
         </div>
         
         <div class="tab">Perfil de Vendedor:
-          <p><input type="text" name="nomVendedor" value="Nombre Fantasia/Apodo"></p>
+          <p><input type="text" name="nomVendedor" placeholder="Nombre Fantasia/Apodo"></p>
          <p><input type="checkbox" id="utilizarApodo"  value="first_checkbox">Utilizar mi nombre y apellido como nombre fantasia/apodo</p>
        <p><input type="checkbox" id="esVendedor" value="first_checkbox"><b>No quiero activar ahora mi perfil de vendedor</b></p> 
       <p><input type="checkbox" id="aceptaTerminos" value="first_checkbox">Al registrarme acepto los <a>terminos y condiciones y la Politica de Privacidad de SLC Componentes Electronicos SA</a></p>
