--- a/app/views/productAdd.ejs
+++ b/app/views/productAdd.ejs
@@ -12,7 +12,6 @@
     <div class="container-header">
       <%- include('../partials/nav'); %> 
   <h3 class="tituloPagina"> Cargar Producto</h3>
-  <h6> Paso 1 de 2</h6>
   <div class="container"> 
     <form action="/products" enctype="multipart/form-data" method="POST" class="cabezalPagina">
     <div class="row">
@@ -39,9 +38,7 @@
           <option>PLC</option>
           <option>Combos y Ofertas</option>
         </select>
-        <label>Imagen del Producto:</label>
-      <input type="file" name="image">
-      </div>
+    </div>
       
     </div>
   
@@ -52,35 +49,18 @@
       <p class="tituloDetalle"> ESPECIFICACIONES </p>
     </div>
   </div>
-  <div class="container"> 
-    <div class="row">
-      <div class="form-group col">
-        <label for="inputMarca">Marca</label>
-        <input type="text" class="form-control" id="inputMarca" name="marca">
-      </div>
-      <div class="form-group col">
-        <label for="inputModelo">Modelo</label>
-        <input type="text" class="form-control" id="inputModelo" name="modelo">
-      </div>
-    </div>
-  </div>
-    <div class="container"> 
+     <div class="container"> 
       <div class="row">
         <div class="form-group col">
-          <label for="inputMicrocontrolador">Microcontrolador</label>
-          <input type="text" class="form-control" id="inputMicrocontrolador" name="microcontrolador">
+          <label for="inputModelo">Modelo</label>
+          <input type="text" class="form-control" id="inputModelo" name="modelo">
         </div>
         <div class="form-group col">
           <label for="inputVoltaje">Voltaje</label>
           <input type="text" class="form-control" id="inputVoltaje" name="voltaje">
         </div>
       </div>
-      <div class="row">
-        <div class="col-12">
-          <p class="tituloDetalle"> ESPECIFICACIONES </p>
-        </div>
-      </div>
-      
+          
         <div class="row">
           <div class="form-group col">
             <label for="Price">Precio</label>
@@ -95,7 +75,13 @@
             </div>
           </div>
         </div>
-      
+        <div class="row">
+          <div class="col-12">
+            <p class="tituloDetalle"> IMAGENES </p>
+            <label>Imagen del Producto:</label>
+      <input type="file" name="image">
+          </div>
+        </div>
 
       <div class="containerBoton"> 
         <div class="row">
