fix menor a useradd

--- a/app/views/userForm.ejs
+++ b/app/views/userForm.ejs
@@ -25,16 +25,17 @@
             <option>Hombre</option>
             <option>Mujer</option>
           </select></p>
+         
           <p> <label>Foto:</label>
-            <input type="file" name="image"></p>
+            <input type="file" name="image" placeholder="test"></p>
             <p><select id="inputState" class="form-control">
               <option selected>Tipo de Documento</option>
               <option>DNI</option>
               <option>Libreta</option>
               <option>Pasaporte</option>
             </select></p>
-            <p><label for="inputModelo">Numero de Documento</label>
-              <input type="text" class="form-control" id="inputModelo" name="numeroDoc"></p>
+            <p>
+              <input type="text" class="form-control" id="inputModelo" placeholder="Número de documento..." name="numeroDoc"></p>
 
         </div>
 
