--- a/app/public/stylesheets/userForm.css
+++ b/app/public/stylesheets/userForm.css
@@ -1,7 +1,7 @@
 /* Style the form */
 #regForm {
     background-color: #ffffff;
-    margin: 100px auto;
+    margin: auto;
     padding: 40px;
     width: 70%;
     min-width: 300px;
