--- a/app/public/stylesheets/styleProductDetailOk.css
+++ b/app/public/stylesheets/styleProductDetailOk.css
@@ -149,9 +149,10 @@ a {
 
 /*Pie de Detalle Compra*/
 .pieDetalle {
-  border:solid 1px lightslategrey;
+  border:solid 1px #597ff9;
   margin-top: 10%;
   padding: 0 15px;
+  border-radius: 15px;
 }
 
 .precio {
@@ -159,6 +160,7 @@ a {
   font-size: 18px;
   margin: 15px 0;
 }
+
 
 .drop-own {
   margin-bottom: 15px;
