--- a/app/views/register.ejs
+++ b/app/views/register.ejs
@@ -38,7 +38,7 @@
     <div class="row">
       <div class="col-12">
         
-    <a class="crearCta" href="/registerformA">
+    <a class="crearCta" href="/users/Create">
       <input class="registrate" type="submit" value="Registrate">
       </a>
       </div>
